Fixed Threads doesn't work on Linux #33107

Closed
opened 2012-11-06 21:23:18 +01:00 by Alexey Vorontsov · 5 comments

%%%Fixed Threads doesn't work on Linux if i use Cycles renderer. It always use both CPU cores on my computer. Sometimes i need this feature and i guess i'm not thew only one, that's why i reporting it. I use 32 bit Linux and official Blender 2.64a. Currently i'm not at home, so i can provide more info about my system later if needed..

Thank you.%%%

%%%Fixed Threads doesn't work on Linux if i use Cycles renderer. It always use both CPU cores on my computer. Sometimes i need this feature and i guess i'm not thew only one, that's why i reporting it. I use 32 bit Linux and official Blender 2.64a. Currently i'm not at home, so i can provide more info about my system later if needed.. Thank you.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Hi,
this is intended behaviour.
Cycles always allocates the amount of cores you set + 1 (which is the main thread). This gives better performance from what I remember, but will assign to Brecht to check anyways. %%%

%%%Hi, this is intended behaviour. Cycles always allocates the amount of cores you set + 1 (which is the main thread). This gives better performance from what I remember, but will assign to Brecht to check anyways. %%%

%%%Fix in svn, thanks for the report. For auto we can do amount of cores + 1, but for fixed we can follow the setting.%%%

%%%Fix in svn, thanks for the report. For auto we can do amount of cores + 1, but for fixed we can follow the setting.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Excellent, thank you very much!%%%

%%%Excellent, thank you very much!%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33107
No description provided.