Fix #33107: cycles fixed threads 1 was still having two cores do work, because main thread works as well.