intern/cycles/util/util_task.h
@@ -94,7 +94,10 @@ public:
 	static void init(int num_threads = 0);
 	static void exit();
 
-	static int num_threads() { return threads.size(); }
+	/* number of threads that can work on tasks, main thread counts too */
+	static int num_threads() { return threads.size() + 1; }
+
+	/* test if any session is using the scheduler */
 	static bool active() { return users != 0; }
 
 protected:
